--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <ons-page id="start-page">
     <ons-toolbar style="height:12%;display:flex;align-items: center; ">
-        <div class="center"><h2 style="margin: 10%">Olympiapark - Guide</h2></div>
+        <div class="center"><h2 style="margin: 10%">Olympiapark - Attentat</h2></div>
     </ons-toolbar>
 
     <div style="height:100%;width:100%;display:flex; align-items: center; justify-content: center;flex-direction: column">
