--- a/info.html
+++ b/info.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <link rel="stylesheet" href="lib/css/onsenui.css">
     <link rel="stylesheet" href="lib/css/onsen-css-components.min.css">
     <script src="lib/js/onsenui.min.js"></script>
@@ -10,69 +11,164 @@
 <body>
 <ons-page>
     <div style="text-align: center; padding: 10px;">
-        <h1>Olympiapark - Audioguide - P Seminar Projekt</h1>
-        <p>
-            Dies ist das P Seminar Projekt von Sascha Milo und Luis(2020).
-            App entwickelt von Mario Babic.
-        </p>
-        <h2>Bildquellen (Aufgerufen am 23.07.2020)</h2>
-        <p>
-        <h2>Audio &nbsp;Hintergr&uuml;nde&nbsp;:</h2><br>
-        <br>
-        https://www.dw.com/image/16148630_304.jpg<br>
-        https://www.br.de/themen/sport/inhalt/olympia/olympia-hostessen100~_v-img__16__9__l_-1dc0e8f74459dd04c91a0d45af4972b9069f1135.jpg?version=ce6ef<br>
-        https://www.politische-bildung.de/fileadmin/images/slider/nahost_konflikt_850.jpg<br>
-        https://www.lpb-bw.de/geschichte-palaestinas<br>
-        https://www.deutschlandfunkkultur.de/media/thumbs/3/39ba17ba2bb5d0dc02a7007986f94e8bv2_max_477x358_b3535db83dc50e27c1bb1392364c95a2.jpg?key=fe0f68<br>
-        <br>
-        <br>
-        <h2>Audio &nbsp;Die Terroristen&nbsp;:</h2><br>
-        <br>
-        https://www.dw.com/image/16148618_401.jpg&nbsp;<br>
-        https://www.deutschlandfunk.de/media/thumbs/7/7bb2f20d793139670c292c42f6f74503v2_max_465x349_b3535db83dc50e27c1bb1392364c95a2.jpg?key=e3d33d<br>
-        <br>
-        <h2>Audio &nbsp;Olympiaturm&nbsp;:</h2><br>
-        <br>
-        https://www.bild.de/regional/muenchen/olympiaturm/olympiaturm-geburtstag-54885574.bild.html<br>
-        https://www.himmeblau.de/files/Himmeblau_Bilder/Reportagen/2018/5/Olympiaturm/himmeblau%20-%20Olympiapark%20in%20M&uuml;nchen.jpg<br>
-        <br>
-        <br>
-        <h2>Audio &nbsp;Der Gedenkort Einschnitt&nbsp;:</h2><br>
-        <br>
-        https://www.km.bayern.de/bilder/km_absatz/foto/27519_gedenkort.fertig.jpg<br>
-        https://www.tz.de/bilder/2016/10/24/6905653/1716843943-ob-dieter-reiter-sagt-von-zubauen-koenne-keine-rede-sein-17ZxgBvP8gef.jpg<br>
-        https://lh3.googleusercontent.com/proxy/z3A7odQqvXaqaVdHMcK8XJPLQGNBPJhTGGeQqr9k2YymXxL-9bPoR8DU7Nkxa0Bk2sNUjVS8DNQ3n7PI6GKqQLiieKD1RHmydo34bNjeRCs1Ley9c9RxMZt3wdx4d8Iq<br>
-
-        </p>
-        <h1>Textquellen</h1>
-        <p>
-        <h2>Olympiaturm:</h2><br>
-        <br>
-        Vgl.https://de.wikipedia.org/wiki/Olympiaturm#cite_note-1(20.04.2020)<br>
-        Vgl.https://www.olympiapark.de/de/der- olympiapark/veranstaltungsorte/olympiaturm/daten/
-        (20.04.2020)<br>
-        <br>
-        <h2>Der Gedenkort &nbsp;Einschnitt&nbsp;:</h2><br>
-        <br>
-        (1) Vgl.https://www.km.bayern.de/pressemitteilung/10877/nr-330-vom-04-09-2017.html (24.04.2020)<br>
-        (2) Vgl.https://www.wochenanzeiger.de/article/195000.html(24.04.2020)<br>
-        (3) Vgl.https://de.wikipedia.org/wiki/Erinnerungsort_Olympia-Attentat#cite_note-1 (24.04.2020)<br>
-        (4) Vgl.https://de-de.facebook.com/IsraelinGermany/posts/ankie-spitzer-ist-die-witwe-von-
-        andrei-spitzer-dem-fechttrainer-der-bei-dem-olym/428113467203514/ (24.04.2020)<br>
-        (5) Vgl.https://www.sueddeutsche.de/sport/olympische-spiele-in-london-ioc-verweigert-
-        schweigeminute-fuer-opfer-des-olympia-attentats-72-1.1418777 (24.04.2020)<br>
-        Das Attentat – Hintergr&uuml;nde & Die Terroristen<br>
-        <br>
-        https://www.waz.de/panorama/olympia-attentat-1972-in-muenchen-chronik-des- geiseldramas-id226991633.html
-        (22.04.2020)<br>
-        Vgl. https://de.wikipedia.org/wiki/M%C3%BCnchner_Olympia-Attentat (22.04.2020)<br>
-        Vgl. https://www.km.bayern.de/eltern/erziehung-und-bildung/erinnerungsort-olympia-
-        attentat-muenchen-1972/vorgeschichte-und-kontexte/die-staatsgruendung-israels.html (22.04.2020)<br>
-        Vgl. https://www.km.bayern.de/eltern/erziehung-und-bildung/erinnerungsort-olympia-
-        attentat-muenchen-1972/vorgeschichte-und-kontexte/der-arabisch-israelische-konflikt.html (23.04.2020)<br>
-        Vgl.https://www.km.bayern.de/eltern/erziehung-und-bildung/erinnerungsort-olympia-
-        attentat-muenchen-1972/vorgeschichte-und-kontexte/der-palaestinensische-t<br>
-
+        <p>Bildquellen (Aufgerufen am 23.07.2020)<br>
+<br>
+<br>
+            Audio „Hintergründe“:<br>
+<br>
+<br>
+            1.) https://www.dw.com/image/16148630_304.jpg<br>
+<br>
+            2.)<br>
+            https://www.br.de/themen/sport/inhalt/olympia/olympia-hostessen100~_v-img__16__9__l_-1dc0e8f74459dd04c91a0d45af4972b9069f1135.jpg?version=ce6ef<br>
+<br>
+            3.) https://www.politische-bildung.de/fileadmin/images/slider/nahost_konflikt_850.jpg<br>
+<br>
+            4.) https://www.lpb-bw.de/geschichte-palaestinas<br>
+<br>
+            5.)<br>
+            https://www.deutschlandfunkkultur.de/media/thumbs/3/39ba17ba2bb5d0dc02a7007986f94e8bv2_max_477x358_b3535db83dc50e27c1bb1392364c95a2.jpg?key=fe0f68<br>
+<br>
+<br>
+            Audio „Die Terroristen“:<br>
+<br>
+<br>
+            1.) https://www.dw.com/image/16148618_401.jpg“<br>
+<br>
+            2.)<br>
+            https://www.deutschlandfunk.de/media/thumbs/7/7bb2f20d793139670c292c42f6f74503v2_max_465x349_b3535db83dc50e27c1bb1392364c95a2.jpg?key=e3d33d<br>
+<br>
+<br>
+            Audio „Olympiaturm“:<br>
+<br>
+<br>
+            1.) https://www.bild.de/regional/muenchen/olympiaturm/olympiaturm-geburtstag-54885574.bild.html<br>
+<br>
+            2.)<br>
+            https://www.himmeblau.de/files/Himmeblau_Bilder/Reportagen/2018/5/Olympiaturm/himmeblau%20-%20Olympiapark%20in%20München.jpg<br>
+<br>
+<br>
+            Audio „Olympiaberg“:<br>
+<br>
+            1.) http://wikimapia.org/30775/de/Olympiaberg<br>
+            Audio „Konsequenzen und Fehler“:<br>
+<br>
+            1.) https://www.br.de/themen/sport/inhalt/olympia-1972/zeitstrahl-olympia-1972-das-attentat-100.html<br>
+<br>
+<br>
+            Audio „Der Gedenkort Einschnitt“:<br>
+<br>
+<br>
+            1.) https://www.km.bayern.de/bilder/km_absatz/foto/27519_gedenkort.fertig.jpg<br>
+<br>
+            2.)<br>
+            https://www.tz.de/bilder/2016/10/24/6905653/1716843943-ob-dieter-reiter-sagt-von-zubauen-koenne-keine-rede-sein-17ZxgBvP8gef.jpg<br>
+<br>
+            3.)<br>
+            https://lh3.googleusercontent.com/proxy/z3A7odQqvXaqaVdHMcK8XJPLQGNBPJhTGGeQqr9k2YymXxL-9bPoR8DU7Nkxa0Bk2sNUjVS8DNQ3n7PI6GKqQLiieKD1RHmydo34bNjeRCs1Ley9c9RxMZt3wdx4d8Iq<br>
+<br>
+<br>
+            Textquellen<br>
+            Der 5. September 1972: Das Olympia-Attentat - Chronik des Terrors<br>
+            Der Überfall auf die israelische Mannschaft durch palästinensische Attentäter während der Olympischen Spiele<br>
+            1972 in München jährt sich zum 45. Mal. 17 Menschen starben - elf israelische Geiseln, ein deutscher<br>
+            Polizist und fünf Terroristen.<br>
+<br>
+<br>
+            Olympiaturm:<br>
+<br>
+<br>
+            1.) Vgl.https://de.wikipedia.org/wiki/Olympiaturm#cite_note-1(20.04.2020)<br>
+<br>
+            2.) Vgl.https://www.olympiapark.de/de/der- olympiapark/veranstaltungsorte/olympiaturm/daten/ (20.04.2020)<br>
+<br>
+<br>
+            Der Gedenkort „Einschnitt“:<br>
+<br>
+<br>
+            1.) Vgl.https://www.km.bayern.de/pressemitteilung/10877/nr-330-vom-04-09-2017.html (24.04.2020)<br>
+<br>
+            2.) Vgl.https://www.wochenanzeiger.de/article/195000.html(24.04.2020)<br>
+<br>
+            3.) Vgl.https://de.wikipedia.org/wiki/Erinnerungsort_Olympia-Attentat#cite_note-1 (24.04.2020)<br>
+<br>
+            4.) Vgl.https://de-de.facebook.com/IsraelinGermany/posts/ankie-spitzer-ist-die-witwe-von-<br>
+            andrei-spitzer-dem-fechttrainer-der-bei-dem-olym/428113467203514/ (24.04.2020)<br>
+<br>
+            5.) Vgl.https://www.sueddeutsche.de/sport/olympische-spiele-in-london-ioc-verweigert-<br>
+            schweigeminute-fuer-opfer-des-olympia-attentats-72-1.1418777 (24.04.2020)<br>
+<br>
+            Das Attentat – Hintergründe & Die Terroristen<br>
+<br>
+<br>
+            1.) https://www.waz.de/panorama/olympia-attentat-1972-in-muenchen-chronik-des- geiseldramas-id226991633.html<br>
+            (22.04.2020)<br>
+<br>
+            2.) Vgl. https://de.wikipedia.org/wiki/M%C3%BCnchner_Olympia-Attentat (22.04.2020)<br>
+<br>
+            3.) Vgl. https://www.km.bayern.de/eltern/erziehung-und-bildung/erinnerungsort-olympia-<br>
+            attentat-muenchen-1972/vorgeschichte-und-kontexte/die-staatsgruendung-israels.html (22.04.2020)<br>
+<br>
+            4.) Vgl. https://www.km.bayern.de/eltern/erziehung-und-bildung/erinnerungsort-olympia-<br>
+            attentat-muenchen-1972/vorgeschichte-und-kontexte/der-arabisch-israelische-konflikt.html (23.04.2020)<br>
+<br>
+            5.) Vgl.https://www.km.bayern.de/eltern/erziehung-und-bildung/erinnerungsort-olympia-<br>
+            attentat-muenchen-1972/vorgeschichte-und-kontexte/der-palaestinensische-terror.html (24.04.2020)<br>
+<br>
+            1.)<br>
+            https://www.muenchenarchitektur.com/architektur-highlights/18-sonderbauten/20798-olympiastadion-im-olympiapark<br>
+            (24.04.2020)<br>
+<br>
+            2.) https://de.wikipedia.org/wiki/Olympiastadion_M%C3%BCnchen (24.04.2020)<br>
+<br>
+            3.) https://www.grandtourdermoderne.de/orte/ortedetails/130/ (24.04.2020)<br>
+<br>
+            Olympiaberg:<br>
+<br>
+            1.) https://de.wikipedia.org/wiki/Olympiapark_(M%C3%BCnchen) (24.04.2020)<br>
+<br>
+            2.) https://www.gesundheitstrends.de/reise/aussichten/muenchen-olympiaberg.php<br>
+<br>
+            Schuttblume:<br>
+<br>
+            1.) https://de.wikipedia.org/wiki/Schuttblume_(M%C3%BCnchen)#cite_ref-6 (24.04.2020)<br>
+<br>
+            Konsequenzen und Fehler:<br>
+<br>
+            1.) https://de.wikipedia.org/wiki/M%C3%BCnchner_Olympia-Attentat#Folgen (24.04.2020)<br>
+<br>
+            2.) https://www.zeit.de/2012/36/Muenchen-Olympia-Attentat-1972-Interview-Dahlke (24.04.2020)<br>
+<br>
+            3.) https://www.dw.com/de/m%C3%BCnchner-olympia-attentat-1972-vermeidbares-blutbad/a-40366228 (24.04.2020)<br>
+<br>
+<br>
+            Quellen - Geisterbahnhof<br>
+<br>
+            1.) https://de.wikipedia.org/wiki/Bahnhof_M%C3%BCnchen_Olympiastadion#Geschichte<br>
+<br>
+            2.) http://www.spurensuche-eisenbahn.de/abzw-oberwiesenfeld-munchen-olympiastadion/<br>
+<br>
+            3.) http://www.geodaten.bayern.de/denkmal_static_data/externe_denkmalliste/pdf/denkmalliste_merge_162000.pdf<br>
+<br>
+            4.) https://www.sueddeutsche.de/muenchen/tipps-fuer-muenchner-geheime-sehenswuerdigkeiten-1.1563486-2<br>
+<br>
+            Quellen - Attentat<br>
+<br>
+            1.)<br>
+            https://www.welt.de/politik/deutschland/article108480206/Muenchen-1972-das-Protokoll-einer-Katastrophe.html<br>
+<br>
+            2.) https://de.wikipedia.org/wiki/M%C3%BCnchner_Olympia-Attentat#cite_note-11<br>
+<br>
+            3.) https://de.wikipedia.org/wiki/M%C3%BCnchner_Olympia-Attentat#cite_note-11<br>
+<br>
+            4.)<br>
+            https://www.deutschlandfunkkultur.de/schwarzer-september-das-olympia-attentat-von-1972.1079.de.html?dram:article_id=428740<br>
+<br>
+            5.)<br>
+            https://web.nli.org.il/sites/NLI/English/collections/personalsites/Israel-Germany/Israel-Deutschland/Die-Teilung-Deutschlands/Pages/Olympische-Spiele-M%C3%BCnchen.aspx<br>
+<br>
+            6.)<br>
+            https://www.deutschlandfunkkultur.de/schwarzer-september-das-olympia-attentat-von-1972.1079.de.html?dram:article_id=428740<br>
         </p>
         <p>
             <ons-button onclick="window.location.href = 'index.html'">Ok</ons-button>
