--- a/page.html
+++ b/page.html
@@ -256,6 +256,7 @@
                 }
             }
             listContainer = '<ons-list><ons-list-item><h2>Gl&uuml;ckwunsch! ' + answersRight + ' von ' + answersAll + ' Antworten richtig!</h2></ons-list-item>' + listContainer + '</ons-list>';
+            $('#pageTitle').html('Auswertung');
             $('#content').html('');
             $('#content').append($(listContainer));
         },
